--- a/Frontend/css/index.css
+++ b/Frontend/css/index.css
@@ -3,32 +3,79 @@
     margin: 0;
     padding: 0;
 }
-body {
+
+header {
+    left: 50%;
+    transform: translate(-50%, 0);
+    position: fixed;
+    top: 0;
+    max-width: 1200px;
+    width: 100%;
+    height: 100px;
+    background-color: #cbcb50;
 }
+
 .container {
-    height: 1000px;
+    min-height: 1000vh;
     width: 100%;
     display: flex;
     flex-direction: row;
-    margin: auto;
+    margin-top: 100px;
+    margin-left: auto;
+    margin-right: auto;
     justify-content: center;
 }
+
 #vasen {
+    top: 100px;
+    overflow: auto;
+    position: sticky;
     flex-shrink: 1;
     flex-grow: 0;
     width: 100%;
+    height: 600px;
     background: cornflowerblue;
+    max-width: 300px;
 }
+
 #keski {
     flex-shrink: 0;
     flex-grow: 1;
-    flex-basis: 600px;
-    min-width: 600px;
+    max-width: 600px;
     background-color: aquamarine;
 }
+
 #oikea {
+    top: 100px;
+    overflow: auto;
+    position: sticky;
+    height: 600px;
     background-color: #bdadad;
     flex-shrink: 1;
     flex-grow: 0;
     width: 100%;
+    max-width: 300px;
+}
+
+@media screen and (max-width: 700px) {
+    .container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #vasen {
+        position: fixed;
+        top: 100px;
+        height: 50px;
+        max-width: 600px;
+    }
+
+    #oikea {
+        position: fixed;
+        bottom: 0;
+        height: 50px;
+        max-width: 600px;
+        top: initial;
+    }
+
 }
