--- a/Frontend/css/index.css
+++ b/Frontend/css/index.css
@@ -39,10 +39,21 @@ header {
 }
 
 #keski {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     flex-shrink: 0;
-    flex-grow: 1;
-    max-width: 600px;
+    flex-grow: 0;
+    width: 600px;
+    height: 100%;
     background-color: aquamarine;
+}
+.viesti {
+    max-width: 600px;
+    width: 100%;
+    min-height: 300px;
+    background-color: brown;
+    margin-bottom: 20px;
 }
 
 #oikea {
@@ -59,6 +70,7 @@ header {
 
 @media screen and (max-width: 700px) {
     .container {
+        justify-content: flex-start;
         flex-direction: column;
         align-items: center;
     }
@@ -68,6 +80,8 @@ header {
         top: 100px;
         height: 50px;
         max-width: 600px;
+    }
+    #keski {
     }
 
     #oikea {
