--- a/Frontend/css/index.css
+++ b/Frontend/css/index.css
@@ -49,6 +49,7 @@ header {
     padding-top: 20px;
     background-color: aquamarine;
 }
+
 .viesti {
     max-width: 560px;
     width: 100%;
@@ -69,6 +70,29 @@ header {
     max-width: 300px;
 }
 
+#popup-background {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 0, 0, 50%);
+    z-index: 998;
+    display: none;
+}
+
+#login-popup {
+    position: relative;
+    height: 400px;
+    width: 350px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #cbcb50;
+    z-index: 999;
+    display: none;
+}
+
 @media screen and (max-width: 600px) {
     .container {
         justify-content: flex-start;
@@ -82,6 +106,7 @@ header {
         height: 50px;
         max-width: 600px;
     }
+
     #keski {
         padding-top: 70px;
     }
