--- a/Frontend/css/index.css
+++ b/Frontend/css/index.css
@@ -1,7 +1,16 @@
+@font-face {
+    font-family: GalanoClassic;
+    src: url(GalanoClassic-Regular.woff2);
+}
+
 * {
     box-sizing: border-box;
+    font-family: GalanoClassic, sans-serif;
     margin: 0;
     padding: 0;
+}
+body {
+
 }
 
 header {
@@ -44,7 +53,8 @@ header {
     align-items: center;
     flex-shrink: 0;
     flex-grow: 0;
-    width: 600px;
+    max-width: 600px;
+    width: 100%;
     height: 100%;
     padding-top: 20px;
     background-color: aquamarine;
@@ -109,6 +119,10 @@ header {
 
     #keski {
         padding-top: 70px;
+    }
+
+    .viesti {
+        width: 93%;
     }
 
     #oikea {
