--- a/Frontend/css/index.css
+++ b/Frontend/css/index.css
@@ -56,16 +56,54 @@ header {
     max-width: 600px;
     width: 100%;
     height: 100%;
-    padding-top: 20px;
     background-color: aquamarine;
 }
+#uusi-viesti {
+    max-width: 600px;
+    width: 100%;
+}
+#addMessageForm {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #6e8c69;
+    width: 100%;
+    height: 220px;
+}
 
-.viesti {
+#tekstikentta {
+    width:90%;
+    height: 150px;
+    resize: none;
+    font-size: 1.5rem;
+}
+input[type=file] {
+    font-size: 1.2rem;
+}
+
+#input-container {
+    margin-top: 5px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+button {
+    width: 100px;
+    height: 50px;
+}
+
+#viestit {
     max-width: 560px;
     width: 100%;
     min-height: 300px;
-    background-color: brown;
-    margin-bottom: 20px;
+}
+
+.viesti {
+    width: 100%;
+    height: 100%;
+    background-color: #af6767;
+    margin-top: 20px;
 }
 
 #oikea {
@@ -78,29 +116,6 @@ header {
     flex-grow: 0;
     width: 100%;
     max-width: 300px;
-}
-
-#popup-background {
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(0, 0, 0, 50%);
-    z-index: 998;
-    display: none;
-}
-
-#login-popup {
-    position: relative;
-    height: 400px;
-    width: 350px;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #cbcb50;
-    z-index: 999;
-    display: none;
 }
 
 @media screen and (max-width: 600px) {
@@ -132,5 +147,4 @@ header {
         max-width: 600px;
         top: initial;
     }
-
 }
