--- a/Frontend/css/index.css
+++ b/Frontend/css/index.css
@@ -59,7 +59,7 @@ header {
     justify-content: center;
 
 }
-#aluevalikko {
+.aluevalikko {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -75,7 +75,7 @@ header {
     height: 40px;
     max-width: 200px;
     width: 100%;
-    background-color: #AF00FA;
+    background-color: #A100DB;
     transition: background .2s ease-in-out;
     list-style: none;
     border-radius: 20px;
@@ -126,12 +126,12 @@ header {
     align-items: center;
     background-color: #ffffff;
     width: 100%;
-    height: 200px;
+    height: 150px;
 }
 
 #tekstikentta {
     width: 90%;
-    height: 100px;
+    height: 60px;
     resize: none;
     font-size: 1.5rem;
     margin-bottom: 20px;
@@ -160,7 +160,7 @@ input[type=file]::file-selector-button {
     height: 100%;
     width: 100%;
     border: none;
-    background: #AF00FA;
+    background: #A100DB;
     padding: 10px;
     border-radius: 5px;
     color: #ffffff;
@@ -177,7 +177,7 @@ input[type=file]::file-selector-button:hover {
     max-width: 150px;
     height: 40px;
     border: none;
-    background: #AF00FA;
+    background: #A100DB;
     padding: 10px;
     margin-right: 20px;
     border-radius: 5px;
@@ -195,7 +195,7 @@ input[type=file]::file-selector-button:hover {
     max-width: 150px;
     height: 40px;
     border: none;
-    background: #AF00FA;
+    background: #A100DB;
     padding: 10px 20px;
     border-radius: 5px;
     color: #fff;
@@ -240,14 +240,14 @@ input[type=file]::file-selector-button:hover {
 .lK1 {
     display: flex;
     flex-direction: column;
+    width: 100%;
 }
 
 .lK2 {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    padding-left: 50px;
     width: 100%;
 }
 
@@ -287,7 +287,7 @@ p.viesti {
     max-width: 100px;
     height: 30px;
     border: none;
-    background: #AF00FA;
+    background: #A100DB;
     border-radius: 5px;
     margin-left: 10px;
     margin-right: 10px;
@@ -301,7 +301,7 @@ p.viesti {
     max-width: 100px;
     height: 30px;
     border: none;
-    background: #AF00FA;
+    background: #A100DB;
     border-radius: 5px;
     margin-right: 10px;
     color: #fff;
@@ -314,7 +314,7 @@ p.viesti {
     max-width: 100px;
     height: 30px;
     border: none;
-    background: #AF00FA;
+    background: #A100DB;
     border-radius: 5px;
     color: #fff;
     cursor: pointer;
@@ -339,6 +339,9 @@ button:hover {
         height: 50px;
         max-width: 600px;
         margin: 0;
+        padding: 5px;
+        border-radius: 0;
+        box-shadow: 0 5px 5px -4px #8a8a8a;
     }
 
     #keski {
@@ -352,9 +355,23 @@ button:hover {
     #oikea {
         position: fixed;
         bottom: 0;
-        height: 50px;
+        height: 51px;
         max-width: 600px;
         top: initial;
         margin: 0;
+        padding: 5px;
+        border-radius: 0;
+        box-shadow: 0 0 5px 0 #8a8a8a;
+    }
+    .aluevalikko {
+        flex-direction: row;
+    }
+    .aluelista {
+        margin-bottom: 0;
+        margin-right: 5px;
+        margin-left: 5px;
+    }
+    .aluelinkki {
+        font-size: 0.7rem;
     }
 }
