--- a/Frontend/css/index.css
+++ b/Frontend/css/index.css
@@ -88,6 +88,10 @@ header {
     font-size: 1.2rem;
     color: #FFFFFF;
 }
+#search-form > input{
+    max-width: 200px;
+    width: 100%;
+}
 
 #keski {
     display: flex;
