--- a/Frontend/css/index.css
+++ b/Frontend/css/index.css
@@ -25,7 +25,7 @@ header {
     max-width: 1200px;
     width: 100%;
     height: 60px;
-    background-color: #E6E6E6;
+    background-color: #F0F0F0;
     //border-bottom: black solid 1px;
     box-shadow: 0 5px 5px -5px black;
 }
@@ -223,12 +223,12 @@ input[type=file]::file-selector-button:hover {
     width: 100%;
     height: 100%;
     background-color: #FFFFFF;
-    border-top: 1px solid #E6E6E6;
+    border-top: 1px solid #F0F0F0;
     transition: background .2s ease-in-out;
 }
 
 .viesti-container:hover {
-    background-color: #E6E6E6;
+    background-color: #F0F0F0;
 }
 
 .lahettaja-kortti {
@@ -259,10 +259,16 @@ p.lK1 {
 }
 .viestikortti-palsta {
     font-weight: bold;
-    padding: 5px;
-    background-color: #E6E6E6;
-    border-radius: 10px;
+    padding: 2px 5px 2px 5px;
+
+    background-color: #F0F0F0;
+    border-radius: 5px;
     box-shadow: 0 0 3px -2px black;
+    transition: background .2s ease-in-out;
+}
+
+.viesti-container:hover .viestikortti-palsta {
+    background-color: #ffffff;
 }
 
 .viesti-kortti {
@@ -318,6 +324,7 @@ i {
 
 .message-button:hover >*{
     color: #8F00C7;
+    font-weight: 600;
 }
 
 .message-button > * {
@@ -343,7 +350,7 @@ i {
         margin: 0;
         padding: 5px;
         border-radius: 0;
-        box-shadow: 0 5px 5px -4px #E6E6E6;
+        box-shadow: 0 5px 5px -4px #F0F0F0;
     }
 
     #keski {
@@ -363,7 +370,7 @@ i {
         margin: 0;
         padding: 5px;
         border-radius: 0;
-        box-shadow: 0 0 5px 0 #E6E6E6;
+        box-shadow: 0 0 5px 0 #F0F0F0;
     }
     .aluevalikko {
         flex-direction: row;
