--- a/Frontend/css/index.css
+++ b/Frontend/css/index.css
@@ -1,7 +1,6 @@
 @font-face {
     font-family: GalanoClassic;
     src: url(GalanoClassic-Regular.woff2);
-
 }
 
 * {
@@ -26,7 +25,7 @@ header {
     width: 100%;
     height: 60px;
     background-color: #F0F0F0;
-    //border-bottom: black solid 1px;
+/ / border-bottom: black solid 1 px;
     box-shadow: 0 5px 5px -5px black;
 }
 
@@ -58,6 +57,7 @@ header {
     justify-content: center;
 
 }
+
 .aluevalikko {
     display: flex;
     flex-direction: column;
@@ -66,6 +66,7 @@ header {
 
 
 }
+
 .aluelista {
     display: flex;
     justify-content: center;
@@ -83,12 +84,14 @@ header {
 .aluelista:hover {
     background: #490066;
 }
-.aluelinkki{
+
+.aluelinkki {
     text-decoration: none;
     font-size: 1.2rem;
     color: #FFFFFF;
 }
-#search-form > input{
+
+#search-form > input {
     max-width: 200px;
     width: 100%;
 }
@@ -236,16 +239,19 @@ input[type=file]::file-selector-button:hover {
     flex-direction: row;
     align-items: center;
 }
+
 .profiilikuva {
     border-radius: 20px;
     margin-right: 10px;
 }
+
 .lK1 {
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 100%;
 }
+
 p.lK1 {
     width: 50px;
 }
@@ -257,6 +263,7 @@ p.lK1 {
     align-items: center;
     width: 100%;
 }
+
 .viestikortti-palsta {
     font-weight: bold;
     padding: 2px 5px 2px 5px;
@@ -276,22 +283,25 @@ p.lK1 {
     display: flex;
     flex-direction: column;
 }
-.
+
 .viesti {
     padding-bottom: 20px;
     font-size: 1rem;
 }
+
 p.viesti {
     padding-top: 10px;
     padding-bottom: 10px;
     max-width: 560px;
     width: 100%;
 }
+
 .viesti-kuva {
-    box-shadow: 0px 0px 5px -3px;
+    box-shadow: 0 0 5px -3px;
     border-radius: 10px;
     width: 100%;
 }
+
 .napit-kortti {
     padding-top: 10px;
     display: flex;
@@ -299,6 +309,7 @@ p.viesti {
     justify-content: center;
     align-items: center;
 }
+
 /*
 i {
     font-size: 1.5rem;
@@ -322,7 +333,7 @@ i {
     text-align: center;
 }
 
-.message-button:hover >*{
+.message-button:hover > * {
     color: #8F00C7;
     font-weight: 600;
 }
@@ -372,14 +383,17 @@ i {
         border-radius: 0;
         box-shadow: 0 0 5px 0 #F0F0F0;
     }
+
     .aluevalikko {
         flex-direction: row;
     }
+
     .aluelista {
         margin-bottom: 0;
         margin-right: 5px;
         margin-left: 5px;
     }
+
     .aluelinkki {
         font-size: 0.7rem;
     }
