--- a/Frontend/css/index.css
+++ b/Frontend/css/index.css
@@ -25,8 +25,14 @@ header {
     width: 100%;
     height: 60px;
     background-color: #F0F0F0;
-/ / border-bottom: black solid 1 px;
     box-shadow: 0 5px 5px -5px black;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+header h1 {
+    font-size: 2rem;
+    padding-left: 20px;
 }
 
 .container {
@@ -51,11 +57,15 @@ header {
     width: 100%;
     height: 100%;
     max-width: 250px;
-    border-radius: 5px;
     display: flex;
     flex-direction: column;
     justify-content: center;
 
+}
+
+#vasen i {
+    display: none;
+    font-size: 1.5rem;
 }
 
 .aluevalikko {
@@ -92,8 +102,44 @@ header {
     color: #FFFFFF;
 }
 
+#search-form {
+    display: flex;
+    flex-direction: column;
+    max-width: 300px;
+    width: 100%;
+    margin-bottom: 50px;
+}
+
+#board-select2 {
+    display: flex;
+    flex-direction: column;
+    max-width: 300px;
+    width: 100%;
+}
+
+#board-select2 select {
+ height: 40px;
+    margin-bottom: 10px;
+}
+
+#board-select2 button {
+    display: flex;
+    flex-direction: column;
+    max-width: 100px;
+    width: 100%;
+}
+
 #search-form > input {
     max-width: 200px;
+    width: 100%;
+    height: 40px;
+    margin-bottom: 10px;
+}
+
+#search-form button {
+    display: flex;
+    flex-direction: column;
+    max-width: 100px;
     width: 100%;
 }
 
@@ -118,7 +164,6 @@ header {
     overflow: auto;
     position: sticky;
     height: 100%;
-    border-radius: 5px;
     flex-shrink: 1;
     flex-grow: 0;
     width: 100%;
@@ -178,7 +223,7 @@ input[type=file]::file-selector-button:hover {
     background: #490066;
 }
 
-#board-select {
+.select {
     width: 100%;
     max-width: 150px;
     height: 40px;
@@ -192,11 +237,11 @@ input[type=file]::file-selector-button:hover {
     transition: background .3s ease-in-out;
 }
 
-#board-select:hover {
+.select:hover {
     background: #490066;
 }
 
-#laheta-nappi {
+.laheta-nappi {
     width: 100%;
     max-width: 150px;
     height: 40px;
@@ -209,7 +254,7 @@ input[type=file]::file-selector-button:hover {
     transition: background .3s ease-in-out;
 }
 
-#laheta-nappi:hover {
+.laheta-nappi:hover {
     background: #490066;
 }
 
@@ -355,6 +400,7 @@ p.viesti {
         padding: 0;
     }
 }
+
 @media screen and (max-width: 800px) {
     .container {
         justify-content: flex-start;
@@ -363,34 +409,66 @@ p.viesti {
     }
 
     #vasen {
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
         position: fixed;
         top: 60px;
         height: 50px;
-        max-width: 600px;
+        max-width: 800px;
         margin: 0;
-        padding: 5px;
+        padding: 0;
         border-radius: 0;
-        box-shadow: 0 5px 5px -4px #F0F0F0;
+        background-color: #F0F0F0;
+        box-shadow: 0 5px 5px -5px black;
+    }
+
+    .vasen-teksti {
+        display: none;
+    }
+
+    #vasen i {
+        display: initial;
+        margin-left: 10px;
+        margin-right: 10px;
     }
 
     #keski {
-        padding-top: 70px;
+        padding-top: 50px;
     }
 
-    .viesti {
-        width: 93%;
+    #search-form {
+        flex-direction: row;
+        justify-content: flex-start;
+        margin-bottom: 0;
+    }
+
+    #board-select2 {
+        flex-direction: row;
+        justify-content: flex-start;
+    }
+
+    #board-select2 select {
+        margin-bottom: 0;
+        max-width: 150px;
+    }
+
+    #search-form > input {
+        margin-bottom: 0;
+        max-width: 150px;
     }
 
     #oikea {
         position: fixed;
         bottom: 0;
-        height: 51px;
-        max-width: 600px;
+        height: 50px;
+        max-width: 800px;
         top: initial;
         margin: 0;
-        padding: 5px;
+        padding: 0;
         border-radius: 0;
-        box-shadow: 0 0 5px 0 #F0F0F0;
+        background-color: #F0F0F0;
+        box-shadow: 0 -5px 5px -5px black;
     }
 
     .aluevalikko {
@@ -399,15 +477,31 @@ p.viesti {
     }
 
     .aluelista {
+
         margin-bottom: 0;
-        margin-right: 5px;
-        margin-left: 5px;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
+        height: 40px;
+        max-width: 170px;
+        width: 100%;
+        background-color: #F0F0F0;
+        transition: background .2s ease-in-out;
+        border-radius: 5px;
+    }
+    .aluelista i {
+        font-size: 1.4rem;
+        color: black;
+    }
+    .aluelista i:hover {
+        color: #8F00C7;
+    }
+
+    .aluelista:hover {
+        background-color: initial;
     }
 
     .aluelinkki {
-        font-size: 1rem;
+        padding-left: 0;
+        text-decoration: none;
+        font-size: 1.2rem;
+        color: #FFFFFF;
     }
 }
