--- a/Frontend/css/index.css
+++ b/Frontend/css/index.css
@@ -72,6 +72,7 @@ header h1 {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     width: 100%;
 
 
