--- a/Frontend/css/modify-user.css
+++ b/Frontend/css/modify-user.css
@@ -42,14 +42,14 @@ header {
     flex-direction: row;
 }
 
-#login {
+#modify-user {
     display: flex;
     flex-direction: column;
     max-width: 300px;
     width: 100%;
 }
 
-#register {
+#change-picture {
     display: flex;
     flex-direction: column;
     max-width: 300px;
@@ -89,20 +89,40 @@ input {
     margin-bottom: 10px;
 }
 
-.login-buttons {
+.edit-buttons {
     width: 100%;
     max-width: 150px;
     height: 40px;
     border: none;
     background: #8F00C7;
-    padding: 10px 20px;
+    padding: 10px;
     border-radius: 5px;
     color: #FFFFFF;
     cursor: pointer;
     transition: background .3s ease-in-out;
 }
 
-.login-buttons:hover {
+.edit-buttons:hover {
+    background: #490066;
+}
+
+input[type=file] {
+    border: 1px solid black;
+    max-width: 300px;
+    width: 100%;
+}
+
+input[type=file]::file-selector-button {
+    background: #8F00C7;
+    color: #FFFFFF;
+    border-radius: 5px;
+    border: none;
+    height: 40px;
+    margin: 0;
+}
+
+
+input[type=file]::file-selector-button:hover {
     background: #490066;
 }
 
