--- a/Frontend/css/index.css
+++ b/Frontend/css/index.css
@@ -30,6 +30,7 @@ header {
     flex-direction: row;
     align-items: center;
 }
+
 header h1 {
     font-size: 2rem;
     padding-left: 20px;
@@ -96,6 +97,10 @@ header h1 {
     background: #490066;
 }
 
+.aluelista i {
+    margin-right: 10px;
+}
+
 .aluelinkki {
     padding-left: 20px;
     text-decoration: none;
@@ -119,8 +124,9 @@ header h1 {
 }
 
 #board-select2 select {
- height: 40px;
+    height: 40px;
     margin-bottom: 10px;
+    border-radius: 5px;
 }
 
 #board-select2 button {
@@ -134,6 +140,9 @@ header h1 {
     max-width: 200px;
     width: 100%;
     height: 40px;
+    border-radius: 5px;
+    border-width: 1px;
+    padding: 5px;
     margin-bottom: 10px;
 }
 
@@ -172,21 +181,24 @@ header h1 {
 }
 
 #addMessageForm {
+    margin-top: 10px;
+    margin-bottom: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: #FFFFFF;
     width: 100%;
-    height: 150px;
 }
 
 #tekstikentta {
+    border-radius: 5px;
+    padding: 5px;
     width: 90%;
-    height: 60px;
+    height: 100px;
     resize: none;
-    font-size: 1.5rem;
-    margin-bottom: 20px;
+    font-size: 1rem;
+    margin-bottom: 10px;
 }
 
 #input-container {
@@ -356,6 +368,7 @@ p.viesti {
     justify-content: center;
     align-items: center;
 }
+
 .message-button {
     display: flex;
     flex-direction: row;
@@ -391,12 +404,19 @@ p.viesti {
     #oikea {
         margin-left: auto;
     }
+
     .linkkiteksti {
         display: none;
     }
-    .aluelista  {
+
+    .aluelista {
         justify-content: center;
     }
+
+    .aluelista i {
+        margin-right: 0;
+    }
+
     .aluelinkki {
         padding: 0;
     }
@@ -444,6 +464,10 @@ p.viesti {
         margin-bottom: 0;
     }
 
+    #search-form input{
+        margin-right: 10px;
+    }
+
     #board-select2 {
         flex-direction: row;
         justify-content: flex-start;
@@ -451,6 +475,7 @@ p.viesti {
 
     #board-select2 select {
         margin-bottom: 0;
+        margin-right: 10px;
         max-width: 150px;
     }
 
@@ -484,13 +509,15 @@ p.viesti {
         max-width: 170px;
         width: 100%;
         background-color: #F0F0F0;
-        transition: background .2s ease-in-out;
+        transition: none;
         border-radius: 5px;
     }
+
     .aluelista i {
         font-size: 1.4rem;
         color: black;
     }
+
     .aluelista i:hover {
         color: #8F00C7;
     }
