--- a/Frontend/css/index.css
+++ b/Frontend/css/index.css
@@ -194,7 +194,7 @@ header h1 {
 #tekstikentta {
     border-radius: 5px;
     padding: 5px;
-    width: 90%;
+    width: 100%;
     height: 100px;
     resize: none;
     font-size: 1rem;
@@ -274,7 +274,8 @@ input[type=file]::file-selector-button:hover {
 #viestit {
     max-width: 600px;
     width: 100%;
-    min-height: 300px;
+    height: 100%;
+    margin-bottom: 60px;
     box-shadow: 0 1px 10px -5px black;
 }
 
