--- a/Frontend/css/show-message.css
+++ b/Frontend/css/show-message.css
@@ -153,6 +153,7 @@ header h1 {
     max-width: 600px;
     width: 100%;
     height: 100%;
+    padding-top: 10px;
 }
 
 #oikea {
@@ -173,33 +174,21 @@ header h1 {
 #vastaukset {
     max-width: 600px;
     width: 100%;
-    min-height: 300px;
+    height: 100%;
+    margin-bottom: 60px;
     box-shadow: 0 1px 10px -5px black;
 }
 
-#addMessageForm {
-    background-color: #FFFFFF;
-    max-width: 600px;
-    width: 100%;
-    height: 100px;
-}
 
-#addMessageForm {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #FFFFFF;
-    width: 100%;
-    height: 150px;
-}
 
 #tekstikentta {
-    width: 90%;
-    height: 60px;
+    border-radius: 5px;
+    padding: 5px;
+    width: 100%;
+    height: 100px;
     resize: none;
-    font-size: 1.5rem;
-    margin-bottom: 20px;
+    font-size: 1rem;
+    margin-bottom: 10px;
 }
 
 #input-container {
@@ -255,6 +244,17 @@ input[type=file]::file-selector-button:hover {
     background: #490066;
 }
 
+#addReplyForm {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #FFFFFF;
+    width: 100%;
+}
+
 .laheta-nappi {
     width: 100%;
     max-width: 150px;
@@ -277,6 +277,7 @@ input[type=file]::file-selector-button:hover {
     width: 100%;
     min-height: 300px;
     box-shadow: 0 1px 10px -5px black;
+    margin-bottom: 0;
 }
 
 .viesti-container {
@@ -423,18 +424,7 @@ p.viesti {
     }
 
     #vasen {
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        position: fixed;
-        top: 60px;
-        height: 50px;
-        max-width: 900px;
-        margin: 0;
-        padding: 0;
-        border-radius: 0;
-        background-color: #F0F0F0;
-        box-shadow: 0 5px 5px -5px black;
+        display: none;
     }
 
     .vasen-teksti {
@@ -448,7 +438,7 @@ p.viesti {
     }
 
     #keski {
-        padding-top: 50px;
+        padding-top: 10px;
     }
 
     #search-form {
