--- a/Frontend/css/index.css
+++ b/Frontend/css/index.css
@@ -286,7 +286,7 @@ input[type=file]::file-selector-button:hover {
     width: 100%;
     height: 100%;
     background-color: #FFFFFF;
-    border-top: 1px solid #F0F0F0;
+    border-top: 2px solid #F0F0F0;
     transition: background .2s ease-in-out;
 }
 
@@ -299,10 +299,29 @@ input[type=file]::file-selector-button:hover {
     flex-direction: row;
     align-items: center;
 }
+.lahettaja-kortti-nimi {
+    font-weight: bold;
+}
+
 
 .profiilikuva {
     border-radius: 20px;
     margin-right: 10px;
+}
+
+.lahettaja-kortti-aika {
+    font-size: 0.9rem;
+    flex-shrink: 0;
+    margin-right: 10px;
+}
+
+.viestikortti-palsta {
+    font-weight: bold;
+    padding: 2px 5px 2px 5px;
+    background-color: #F0F0F0;
+    border-radius: 5px;
+    box-shadow: 0 0 3px -2px black;
+    transition: background .2s ease-in-out;
 }
 
 .lK1 {
@@ -322,16 +341,6 @@ p.lK1 {
     justify-content: space-around;
     align-items: center;
     width: 100%;
-}
-
-.viestikortti-palsta {
-    font-weight: bold;
-    padding: 2px 5px 2px 5px;
-
-    background-color: #F0F0F0;
-    border-radius: 5px;
-    box-shadow: 0 0 3px -2px black;
-    transition: background .2s ease-in-out;
 }
 
 .viesti-container:hover .viestikortti-palsta {
@@ -360,6 +369,11 @@ p.viesti {
     box-shadow: 0 0 5px -3px;
     border-radius: 10px;
     width: 100%;
+}
+
+.viesti-kortti-muokkausaika {
+    font-size: 0.9rem;
+    font-weight: bold;
 }
 
 .napit-kortti {
@@ -395,7 +409,7 @@ p.viesti {
 
 .message-button > * {
     color: black;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     padding-left: 5px;
     padding-right: 5px;
 }
@@ -533,4 +547,15 @@ p.viesti {
         font-size: 1.2rem;
         color: #FFFFFF;
     }
+
+    .viestikortti-palsta {
+        margin-right: 20px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .lahettaja-kortti-email {
+        display: none;
+    }
+
 }
