--- a/Frontend/css/modify-user.css
+++ b/Frontend/css/modify-user.css
@@ -22,6 +22,14 @@ header {
     height: 60px;
     background-color: #F0F0F0;
     box-shadow: 0 5px 5px -5px black;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+header h1 {
+    font-size: 2rem;
+    padding-left: 20px;
 }
 
 .container {
