--- a/Frontend/css/index.css
+++ b/Frontend/css/index.css
@@ -116,6 +116,16 @@ header h1 {
     margin-bottom: 50px;
 }
 
+#search-form > input {
+    max-width: 200px;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    border-width: 1px;
+    padding: 5px;
+    margin-bottom: 10px;
+}
+
 #board-select2 {
     display: flex;
     flex-direction: column;
@@ -127,6 +137,8 @@ header h1 {
     height: 40px;
     margin-bottom: 10px;
     border-radius: 5px;
+    max-width: 150px;
+    width: 100%;
 }
 
 #board-select2 button {
@@ -134,16 +146,6 @@ header h1 {
     flex-direction: column;
     max-width: 100px;
     width: 100%;
-}
-
-#search-form > input {
-    max-width: 200px;
-    width: 100%;
-    height: 40px;
-    border-radius: 5px;
-    border-width: 1px;
-    padding: 5px;
-    margin-bottom: 10px;
 }
 
 #search-form button {
@@ -556,6 +558,19 @@ p.viesti {
 @media screen and (max-width: 600px) {
     .lahettaja-kortti-email {
         display: none;
+    }
+    #vasen {
+        flex-direction: column;
+        height: 100px;
+    }
+    #vasen i {
+        display: none;
+    }
+    #search-form {
+        margin-bottom: 10px;
+    }
+    #keski {
+        padding-top: 100px;
     }
 
 }
