--- a/Frontend/css/index.css
+++ b/Frontend/css/index.css
@@ -308,6 +308,7 @@ input[type=file]::file-selector-button:hover {
 
 .profiilikuva {
     border-radius: 20px;
+    box-shadow: 0px 0px 5px -2px;
     margin-right: 10px;
 }
 
