--- a/Frontend/css/single.css
+++ b/Frontend/css/single.css
@@ -25,56 +25,65 @@ header {
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
+    padding-right: 20px;
 }
 
 header h1 {
     font-size: 2rem;
     padding-left: 20px;
 }
+.aluelista {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    height: 40px;
+    max-width: 170px;
+    width: 100%;
+    background-color: #8F00C7;
+    transition: background .2s ease-in-out;
+    list-style: none;
+    border-radius: 5px;
+}
+
+.aluelista:hover {
+    background: #490066;
+}
+
+.aluelista i {
+    margin-right: 10px;
+}
+
+.aluelinkki {
+    padding-left: 20px;
+    text-decoration: none;
+    font-size: 1.2rem;
+    color: #FFFFFF;
+}
 
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 600px;
+    max-width: 1200px;
     width: 100%;
     height: 100%;
-    margin-top: 100px;
+    margin-top: 60px;
     margin-left: auto;
     margin-right: auto;
     justify-content: center;
     padding: 10px;
 }
 
-.forms {
-    display: flex;
-    flex-direction: row;
-}
-
-.form {
-    display: flex;
-    flex-direction: column;
-    max-width: 300px;
-    width: 100%;
-    padding: 20px;
-}
-
-h3 {
-    margin-bottom: 20px;
-    font-size: 1.5rem;
-    max-width: 300px;
+img {
+    max-width: 1200px;
     width: 100%;
 }
 
-
-#tekstikentta {
-    max-width: 600px;
+#map {
+    max-width: 1200px;
     width: 100%;
-    border-radius: 5px;
-    height: 100px;
-    resize: none;
-    font-size: 1rem;
-    padding: 5px;
+    height: 500px;
 }
 
 .edit-buttons {
