--- a/Frontend/css/modify-message.css
+++ b/Frontend/css/modify-message.css
@@ -93,3 +93,27 @@ h3 {
 .edit-buttons:hover {
     background: #490066;
 }
+
+dialog {
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    position: fixed;
+    width: 300px;
+    height: 100px;
+    border-radius: 5px;
+    border-width: 0;
+    background-color: #8F00C7;
+    color: white;
+    box-shadow: 0px 0px 10px 0px;
+
+}
+dialog > p {
+    width: 300px;
+    height: 100px;
+    font-size: 1.2rem;
+    padding: 20px 10px 10px 10px;
+
+    text-align: center;
+    vertical-align: center;
+}
