--- a/Frontend/css/modify-user.css
+++ b/Frontend/css/modify-user.css
@@ -164,6 +164,30 @@ input[type=file]::file-selector-button:hover {
     color: #FFFFFF;
 }
 
+dialog {
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    position: fixed;
+    width: 300px;
+    height: 100px;
+    border-radius: 5px;
+    border-width: 0;
+    background-color: #8F00C7;
+    color: white;
+    box-shadow: 0px 0px 10px 0px;
+
+}
+dialog > p {
+    width: 300px;
+    height: 100px;
+    font-size: 1.2rem;
+    padding: 20px 10px 10px 10px;
+
+    text-align: center;
+    vertical-align: center;
+}
+
 
 @media screen and (max-width: 500px) {
     .container {
