--- a/Frontend/css/index.css
+++ b/Frontend/css/index.css
@@ -308,7 +308,7 @@ input[type=file]::file-selector-button:hover {
 
 .profiilikuva {
     border-radius: 20px;
-    box-shadow: 0px 0px 5px -2px;
+    box-shadow: 0 0 5px -2px;
     margin-right: 10px;
 }
 
@@ -428,17 +428,17 @@ dialog {
     border-width: 0;
     background-color: #8F00C7;
     color: white;
-    box-shadow: 0px 0px 10px 0px;
+    box-shadow: 0 0 10px 0;
 
 }
 dialog > p {
+    display: flex;
     width: 300px;
     height: 100px;
     font-size: 1.2rem;
-    padding: 20px 10px 10px 10px;
-
-    text-align: center;
-    vertical-align: center;
+    padding: 10px;
+    align-items: center;
+    justify-content: center;
 }
 
 @media screen and (max-width: 1100px) {
