--- a/Frontend/css/modify-message.css
+++ b/Frontend/css/modify-message.css
@@ -105,15 +105,15 @@ dialog {
     border-width: 0;
     background-color: #8F00C7;
     color: white;
-    box-shadow: 0px 0px 10px 0px;
+    box-shadow: 0 0 10px 0;
 
 }
 dialog > p {
+    display: flex;
     width: 300px;
     height: 100px;
     font-size: 1.2rem;
-    padding: 20px 10px 10px 10px;
-
-    text-align: center;
-    vertical-align: center;
+    padding: 10px;
+    align-items: center;
+    justify-content: center;
 }
