--- a/Frontend/css/index.css
+++ b/Frontend/css/index.css
@@ -171,7 +171,7 @@ header h1 {
     flex-direction: column;
     justify-content: center;
     margin-left: 40px;
-    padding: 20px;
+    padding: 45px 20px 20px 20px;
     top: 100px;
     overflow: auto;
     position: sticky;
@@ -302,9 +302,9 @@ input[type=file]::file-selector-button:hover {
     align-items: center;
 }
 .lahettaja-kortti-nimi {
+    font-size: 1.1rem;
     font-weight: bold;
 }
-
 
 .profiilikuva {
     border-radius: 20px;
@@ -362,7 +362,7 @@ p.lK1 {
 }
 
 p.viesti {
-    padding-top: 10px;
+    padding-top: 20px;
     padding-bottom: 10px;
     max-width: 560px;
     width: 100%;
@@ -372,6 +372,7 @@ p.viesti {
     box-shadow: 0 0 5px -3px;
     border-radius: 10px;
     width: 100%;
+    margin-bottom: 10px;
 }
 
 .viesti-kortti-muokkausaika {
@@ -436,6 +437,7 @@ dialog > p {
     width: 300px;
     height: 100px;
     font-size: 1.2rem;
+    text-shadow: 0px 0px 3px black;
     padding: 10px;
     align-items: center;
     justify-content: center;
