--- a/Frontend/css/index.css
+++ b/Frontend/css/index.css
@@ -311,7 +311,7 @@ input[type=file]::file-selector-button:hover {
 }
 
 .lahettaja-kortti-email a:hover {
-    background: #490066;
+    color: #490066;
 }
 
 .profiilikuva {
@@ -445,7 +445,7 @@ dialog > p {
     width: 300px;
     height: 100px;
     font-size: 1.2rem;
-    text-shadow: 0px 0px 3px black;
+    text-shadow: 0 0 3px black;
     padding: 10px;
     align-items: center;
     justify-content: center;
