--- a/Frontend/css/login.css
+++ b/Frontend/css/login.css
@@ -136,6 +136,7 @@ dialog > p {
     padding: 10px;
     align-items: center;
     justify-content: center;
+    text-shadow: 0 0 3px black;
 }
 
 @media screen and (max-width: 500px) {
