--- a/Frontend/css/login.css
+++ b/Frontend/css/login.css
@@ -83,7 +83,7 @@ input {
     max-width: 300px;
     width: 100%;
     height: 50px;
-    margin-bottom: 3px;
+    margin-bottom: 10px;
     font-size: 1rem;
     padding: 5px;
     border-radius: 5px;
@@ -94,6 +94,7 @@ input {
 
 .aputeksti {
     font-size: 0.9rem;
+    margin-top: -7px;
     margin-bottom: 10px;
 }
 
