--- a/Frontend/css/modify-user.css
+++ b/Frontend/css/modify-user.css
@@ -85,7 +85,7 @@ input {
     max-width: 300px;
     width: 100%;
     height: 50px;
-    margin-bottom: 3px;
+    margin-bottom: 10px;
     font-size: 1rem;
     padding: 5px;
     border-radius: 5px;
@@ -97,6 +97,7 @@ input {
 .aputeksti {
     font-size: 0.9rem;
     margin-bottom: 10px;
+    margin-top: -7px;
 }
 
 .edit-buttons {
