--- a/Frontend/css/show-message.css
+++ b/Frontend/css/show-message.css
@@ -44,6 +44,8 @@
 h2 {
     font-size: 1.5rem;
     font-weight: bold;
+    padding-top: 5px;
+    padding-bottom: 15px;
 }
 
 @media screen and (max-width: 900px) {
