--- a/Frontend/css/index.css
+++ b/Frontend/css/index.css
@@ -322,7 +322,7 @@ input[type=file]::file-selector-button:hover {
 }
 
 .lahettaja-kortti-aika {
-    font-size: 0.9rem;
+    font-size: 1rem;
     flex-shrink: 0;
     margin-right: 10px;
 }
@@ -591,12 +591,37 @@ dialog > p {
 }
 
 @media screen and (max-width: 600px) {
+    .lK2 {
+        flex-direction: column-reverse;
+        align-items: flex-start;
+    }
+    .profiilikuva {
+        width: 50px;
+        height: 50px;
+        border-radius: 10px;
+    }
+    .lahettaja-kortti-nimi {
+        font-weight: normal;
+        margin-right: 10px;
+    }
     .lahettaja-kortti-email {
         display: none;
     }
+    .viestikortti-palsta {
+        font-weight: normal;
+        margin: 0;
+        padding: 0;
+    }
+    .lahettaja-kortti-aika {
+        margin: 5px 0 0 0;
+        padding: 0 0 0 5px;
+    }
     #vasen {
         flex-direction: column;
-        height: 100px;
+        height: 50px;
+    }
+    #board-select2 {
+        display: none;
     }
     #vasen i {
         display: none;
@@ -605,7 +630,25 @@ dialog > p {
         margin-bottom: 10px;
     }
     #keski {
-        padding-top: 100px;
+        padding-top: 50px;
+    }
+    #tekstikentta {
+        max-width: 95%;
+    }
+    #input-container {
+        max-width: 95%;
+    }
+    #input-container > *{
+        font-size: 0.8rem;
+    }
+    .select {
+        margin-right: 10px;
+    }
+    input[type=file] {
+        margin-right: 10px;
+    }
+    .laheta-nappi {
+        max-width: 110px;
     }
 
 }
