--- a/Frontend/css/show-message.css
+++ b/Frontend/css/show-message.css
@@ -22,7 +22,7 @@
 #viestit {
     max-width: 600px;
     width: 100%;
-    min-height: 300px;
+    height: 100%;
     box-shadow: 0 1px 10px -5px black;
     margin-bottom: 0;
 }
