--- a/Frontend/css/index.css
+++ b/Frontend/css/index.css
@@ -351,7 +351,7 @@ p.lK1 {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    align-items: center;
+    align-items: flex-start;
     width: 100%;
 }
 
@@ -596,8 +596,8 @@ dialog > p {
         align-items: center;
     }
     .profiilikuva {
-        width: 50px;
-        height: 50px;
+        max-width: 50px;
+        max-height: 50px;
         border-radius: 10px;
     }
     .lahettaja-kortti-nimi {
