--- a/Frontend/css/index.css
+++ b/Frontend/css/index.css
@@ -330,6 +330,7 @@ input[type=file]::file-selector-button:hover {
 .viestikortti-palsta {
     font-weight: bold;
     padding: 2px 5px 2px 5px;
+    margin-right: 10px;
     background-color: #F0F0F0;
     border-radius: 5px;
     box-shadow: 0 0 3px -2px black;
